Now only updating the site if there is a change in the repo. Fixed bug in the nginx.conf and upreated README.md to be slightly cleaner.

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@ http {
         }
 
         location ~* \.(js|jpg|png|css)$ {
-            root /user/share/nginx/html/;
+            root /usr/share/nginx/html/;
         }
     }
     sendfile            on;
