--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,6 +6,7 @@ events{
     worker_connections  1024;
 }
 http {
+    disable_symlinks off;
     include         /etc/nginx/mime.types;
     default_type    application/octet-stream;
 
