--- a/website/data/runtime-config.json
+++ b/website/data/runtime-config.json
@@ -1,5 +1,5 @@
 {
-  "travel": {
+  "trains": {
     "show": true,
     "updateEvery": "600"
   },
@@ -40,7 +40,7 @@
   },
   "transport": {
     "maximumTrainsToShow": 8,
-    "commutes": [
+    "commute": [
       {
         "from": "New Beckenham",
         "noNeedToLeaveBefore": "departure-40m",
