Reloading dashboard if we have a code update from the remote repository (only relevant when running in docker)

--- a/website/data/runtime-config.json
+++ b/website/data/runtime-config.json
@@ -9,6 +9,9 @@
     "location": "<your gps coordinates>",
     "updateEvery": "1800"
   },
+  "reloadDashboardCheck": {
+    "updateEvery": "300"
+  },
   "tasks": {
     "show": true,
     "todoListId": "<your todoListId>",
