--- a/website/data/runtime-config.json
+++ b/website/data/runtime-config.json
@@ -50,9 +50,9 @@
       {
         "from": "New Beckenham",
         "noNeedToLeaveBefore": "departure-40m",
-        "walkTransitTime": "departure-30m",
-        "runTransitTime": "departure-25m",
-        "driveTransitTime": "departure-15m",
+        "minimumWalkTransitTime": "departure-30m",
+        "minimumRunTransitTime": "departure-25m",
+        "minimumDriveTransitTime": "departure-15m",
         "direction": "to-work",
         "showAllDestinations": true,
         "to": [
@@ -64,9 +64,9 @@
       {
         "from": "Beckenham Junction",
         "noNeedToLeaveBefore": "departure-25m",
-        "walkTransitTime": "departure-20m",
-        "runTransitTime": "departure-15m",
-        "driveTransitTime": "departure-10m",
+        "minimumWalkTransitTime": "departure-20m",
+        "minimumRunTransitTime": "departure-15m",
+        "minimumDriveTransitTime": "departure-10m",
         "direction": "to-work",
         "showAllDestinations": true,
         "to": [
@@ -77,9 +77,9 @@
       {
         "from": "Ravensbourne",
         "noNeedToLeaveBefore": "departure-40m",
-        "walkTransitTime": "departure-30m",
-        "runTransitTime": "departure-25m",
-        "driveTransitTime": "departure-10m",
+        "minimumWalkTransitTime": "departure-30m",
+        "minimumRunTransitTime": "departure-25m",
+        "minimumDriveTransitTime": "departure-10m",
         "direction": "to-work",
         "showAllDestinations": true,
         "to": [
