Now redacting private events, showing date that calendar file was last updated,

--- a/website/data/runtime-config.json
+++ b/website/data/runtime-config.json
@@ -22,7 +22,7 @@
     "updateEvery": "120"
   },
   "tasks": {
-    "show": true,
+    "show": false,
     "todoListId": "<your todoListId>",
     "updateEvery": "120"
   },
